--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 
 <body>
     <header>
-
+        <nav>
+            <h1 class="nav-title">Ma<span class="text-primary">r</span>y</h1>
+            <ul>
+                <li><a href="Portfolio">Portfolio</a></li>
+                <li><a href="Blog">Blog</a></li>
+                <li><button class="primary-button">Hire Me</button></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
