--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h1 class="nav-title">Ma<span class="text-primary">r</span>y</h1>
             <ul>
@@ -18,6 +18,19 @@
                 <li><button class="primary-button">Hire Me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3>Hi, I am</h3>
+                <h1>Mary Hardy</h1>
+                <p>
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.
+                </p>
+                <button class="primary-button">Download CV</button>
+                <button class="primary-button">Contact</button>
+            </div>
+            <img class="profile-pic" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
