--- a/index.html
+++ b/index.html
@@ -41,6 +41,24 @@
                 with me.
                 Delivering work within time and budget which meets clients requirements in our mata.
             </p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <h4 class="about-title">Name:</h4>
+                    <p class="about-dis">Mary Hardy</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="about-title">Email:</h4>
+                    <p class="about-dis">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="about-title">Date of birth:</h4>
+                    <p class="about-dis">11 November 1987</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="about-title">From:</h4>
+                    <p class="about-dis">Los Angeles, USA</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
