--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         </div>
     </header>
     <main>
+
+        <!-- About Section Start -->
         <section class="about">
             <h3 class="about-title">About Me</h3>
             <p class="about-dis">I, m a designer & developer with a passion for web design. I enjoy developing simple,
@@ -57,6 +59,49 @@
                 <div class="about-info">
                     <h4 class="about-title">From:</h4>
                     <p class="about-dis">Los Angeles, USA</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- What I do Section Start -->
+
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <p id="what-i-do-dis" class="section-dis">I have more than 10 years experience building software for clients
+                all over the
+                world. Below is a quick
+                overview of my
+                main technical skill sets and technologies i use. Want to find out more about my experience? Check out
+                my online resume
+                and project portfolio.</p>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="/images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+
+                        FontAwesome 5 free icons available.
+                        Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="/images/icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+
+                        FontAwesome 5 free icons available.
+                        Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="/images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+
+                        FontAwesome 5 free icons available.
+                        Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="/images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+
+                        FontAwesome 5 free icons available.
+                        Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
         </section>
