implemnt what i do section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         </section>
 
         <!-- What I do Section Start -->
-
         <section class="what-i-do">
             <h3 class="section-title">What I do</h3>
             <p id="what-i-do-dis" class="section-dis">I have more than 10 years experience building software for clients
@@ -104,6 +103,11 @@
                         Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
+        </section>
+
+        <!-- Resume Container -->
+        <section class="review-resume">
+            <h3 class="resume-title">A summary of My Resume</h3>
         </section>
     </main>
     <footer>
